Added splash screen with custom waiting

--- a/PCSA/PCSA/Base.lproj/Main.storyboard
+++ b/PCSA/PCSA/Base.lproj/Main.storyboard
@@ -1,25 +1,94 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3EH-Op-fZx">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main View Controller-->
+        <scene sceneID="n4F-UX-j54">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Iok-wi-JHr" customClass="MainViewController" customModule="PCSA" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="7XB-Dz-tVt"/>
+                        <viewControllerLayoutGuide type="bottom" id="COX-lm-wj7"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="2b0-zf-9SI">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="GBH-gc-21B"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ywk-30-bCV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1919" y="306"/>
+        </scene>
+        <!--Splash View Controller-->
+        <scene sceneID="INQ-pK-AF1">
+            <objects>
+                <viewController id="3EH-Op-fZx" customClass="SplashViewController" customModule="PCSA" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I50-gd-88k"/>
+                        <viewControllerLayoutGuide type="bottom" id="zHX-cO-aGL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="O8k-ym-XcM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="eyM-SQ-Rkh">
+                                <rect key="frame" x="150" y="150" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="eyM-SQ-Rkh" secondAttribute="height" multiplier="1:1" id="sNh-7D-w7K"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Aide" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aaz-gL-g3e">
+                                <rect key="frame" x="234" y="480" width="133" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.019607843140000001" green="0.81960784310000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="aaz-gL-g3e" firstAttribute="centerX" secondItem="O8k-ym-XcM" secondAttribute="centerX" id="NKW-lZ-5xS"/>
+                            <constraint firstItem="eyM-SQ-Rkh" firstAttribute="centerY" secondItem="O8k-ym-XcM" secondAttribute="centerY" id="UIh-Ne-bwE"/>
+                            <constraint firstItem="aaz-gL-g3e" firstAttribute="top" secondItem="eyM-SQ-Rkh" secondAttribute="bottom" constant="30" id="cGL-Ga-bBE"/>
+                            <constraint firstItem="eyM-SQ-Rkh" firstAttribute="trailing" secondItem="O8k-ym-XcM" secondAttribute="centerXWithinMargins" multiplier="1.5" id="clo-XT-WTm"/>
+                            <constraint firstItem="eyM-SQ-Rkh" firstAttribute="leading" secondItem="O8k-ym-XcM" secondAttribute="centerXWithinMargins" multiplier="0.5" id="hCL-Z8-7lt"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="sbi-7h-4dK" kind="show" identifier="MainNav" id="lYy-zG-nai"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nPK-GB-r4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="145" y="326"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fW1-C5-sTE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sbi-7h-4dK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vj1-Mo-0ZL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Iok-wi-JHr" kind="relationship" relationship="rootViewController" id="ygV-uZ-xdY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aDX-6b-XU7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1107" y="306"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="292" height="292"/>
+    </resources>
 </document>
