Added Main Menu Themed Buttons

--- a/PCSA/PCSA/Base.lproj/Main.storyboard
+++ b/PCSA/PCSA/Base.lproj/Main.storyboard
@@ -11,17 +11,113 @@
         <!--Main View Controller-->
         <scene sceneID="n4F-UX-j54">
             <objects>
-                <viewController id="Iok-wi-JHr" customClass="MainViewController" customModule="PCSA" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Iok-wi-JHr" customClass="MainViewController" customModule="PCSA" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7XB-Dz-tVt"/>
                         <viewControllerLayoutGuide type="bottom" id="COX-lm-wj7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="2b0-zf-9SI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uA8-69-XMS">
+                                <rect key="frame" x="20" y="79" width="560" height="721"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Aide" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaH-um-YAR">
+                                        <rect key="frame" x="214" y="0.0" width="133" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A Safety Resource for Peace Corps Volunteers" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Pq-5z-yNx">
+                                        <rect key="frame" x="20" y="59" width="521" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y5U-xC-JnW" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="155" y="167" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="DeB-kH-M2E"/>
+                                        </constraints>
+                                        <state key="normal" title="Circle of Trust"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMS-Nl-VQl" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="155" y="231" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="hZf-RM-ozq"/>
+                                        </constraints>
+                                        <state key="normal" title="Safety Tools"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTW-SJ-AgQ" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="155" y="295" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="Ctu-1w-nSB"/>
+                                        </constraints>
+                                        <state key="normal" title="Support Services"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEH-e0-nzD" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="155" y="423" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="OUt-8a-G14"/>
+                                        </constraints>
+                                        <state key="normal" title="Policies and Glosary"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="54x-ad-OGD" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="155" y="359" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="AJb-JW-3a0"/>
+                                        </constraints>
+                                        <state key="normal" title="Sexual Assault Awareness"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NsR-Hu-2hj" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="155" y="103" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="7JQ-mm-VRu"/>
+                                            <constraint firstAttribute="height" constant="44" id="9cD-JT-80l"/>
+                                        </constraints>
+                                        <state key="normal" title="Get Medical Help"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="54x-ad-OGD" firstAttribute="top" secondItem="MTW-SJ-AgQ" secondAttribute="bottom" constant="20" id="7IN-Dt-cZ1"/>
+                                    <constraint firstItem="5Pq-5z-yNx" firstAttribute="top" secondItem="PaH-um-YAR" secondAttribute="bottom" constant="20" id="BWY-gu-s9P"/>
+                                    <constraint firstItem="GEH-e0-nzD" firstAttribute="top" secondItem="54x-ad-OGD" secondAttribute="bottom" constant="20" id="C7j-BF-d3j"/>
+                                    <constraint firstAttribute="trailing" secondItem="5Pq-5z-yNx" secondAttribute="trailing" constant="20" id="FNO-Zk-PrD"/>
+                                    <constraint firstItem="y5U-xC-JnW" firstAttribute="top" secondItem="NsR-Hu-2hj" secondAttribute="bottom" constant="20" id="G8G-Id-9hM"/>
+                                    <constraint firstItem="NsR-Hu-2hj" firstAttribute="top" secondItem="5Pq-5z-yNx" secondAttribute="bottom" constant="20" id="Htz-hi-Sv4"/>
+                                    <constraint firstItem="5Pq-5z-yNx" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="LOV-4p-aXp"/>
+                                    <constraint firstItem="NsR-Hu-2hj" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="LR0-il-JtN"/>
+                                    <constraint firstItem="MTW-SJ-AgQ" firstAttribute="top" secondItem="bMS-Nl-VQl" secondAttribute="bottom" constant="20" id="MYM-Am-cBz"/>
+                                    <constraint firstItem="5Pq-5z-yNx" firstAttribute="leading" secondItem="uA8-69-XMS" secondAttribute="leading" constant="20" id="Sx5-72-ySB"/>
+                                    <constraint firstItem="PaH-um-YAR" firstAttribute="top" secondItem="uA8-69-XMS" secondAttribute="top" id="Vnc-lY-48c"/>
+                                    <constraint firstItem="GEH-e0-nzD" firstAttribute="width" secondItem="NsR-Hu-2hj" secondAttribute="width" id="Wxr-qU-LKe"/>
+                                    <constraint firstItem="bMS-Nl-VQl" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="cUi-CP-j8D"/>
+                                    <constraint firstItem="54x-ad-OGD" firstAttribute="width" secondItem="NsR-Hu-2hj" secondAttribute="width" id="gII-Wa-uSg"/>
+                                    <constraint firstItem="y5U-xC-JnW" firstAttribute="width" secondItem="NsR-Hu-2hj" secondAttribute="width" id="jm5-lN-yeN"/>
+                                    <constraint firstAttribute="bottom" secondItem="GEH-e0-nzD" secondAttribute="bottom" constant="20" id="kZ8-Am-ZZF"/>
+                                    <constraint firstItem="bMS-Nl-VQl" firstAttribute="top" secondItem="y5U-xC-JnW" secondAttribute="bottom" constant="20" id="mdb-Ny-1OQ"/>
+                                    <constraint firstItem="bMS-Nl-VQl" firstAttribute="width" secondItem="NsR-Hu-2hj" secondAttribute="width" id="nhu-Ob-GN8"/>
+                                    <constraint firstItem="y5U-xC-JnW" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="ovF-zq-0He"/>
+                                    <constraint firstItem="PaH-um-YAR" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="pbk-9I-ln3"/>
+                                    <constraint firstItem="54x-ad-OGD" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="tEe-y9-x19"/>
+                                    <constraint firstItem="MTW-SJ-AgQ" firstAttribute="width" secondItem="NsR-Hu-2hj" secondAttribute="width" id="tkL-C1-7DA"/>
+                                    <constraint firstItem="MTW-SJ-AgQ" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="wBp-VY-jYy"/>
+                                    <constraint firstItem="GEH-e0-nzD" firstAttribute="centerX" secondItem="uA8-69-XMS" secondAttribute="centerX" id="zax-tP-UFn"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.019607843140000001" green="0.81960784310000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="uA8-69-XMS" firstAttribute="trailing" secondItem="2b0-zf-9SI" secondAttribute="trailingMargin" id="E25-T6-U97"/>
+                            <constraint firstItem="uA8-69-XMS" firstAttribute="top" secondItem="7XB-Dz-tVt" secondAttribute="bottom" constant="15" id="Qog-cz-2QI"/>
+                            <constraint firstItem="uA8-69-XMS" firstAttribute="leading" secondItem="2b0-zf-9SI" secondAttribute="leadingMargin" id="gy4-mJ-sg0"/>
+                            <constraint firstItem="uA8-69-XMS" firstAttribute="bottom" secondItem="COX-lm-wj7" secondAttribute="top" id="nqP-sc-icR"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="GBH-gc-21B"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="800"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ywk-30-bCV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
